Revert back to compiler version 11 until we can confirm everything will work on 17